--- a/package.json
+++ b/package.json
@@ -17,50 +17,50 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack/base.js --open",
     "build": "webpack --config webpack/prod.js",
-    "now-build": "npm run build && mv dist public",
     "lint": "run-s -c lint:js lint:styles",
     "lint:js": "eslint src/**/*.js",
-    "lint:styles": "stylelint src/**/*.css"
+    "lint:styles": "stylelint src/**/*.css",
+    "lint:staged": "lint-staged"
   },
   "dependencies": {
-    "phaser": "^3.19.0"
+    "phaser": "^3.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.0",
-    "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "favicons-webpack-plugin": "^1.0.2",
-    "file-loader": "^4.2.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "favicons-webpack-plugin": "^3.0.1",
+    "file-loader": "^5.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.5",
-    "lint-staged": "^9.2.5",
-    "mini-css-extract-plugin": "^0.8.0",
+    "html-webpack-plugin": "^4.0.0-beta.11",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "offline-plugin": "^5.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "raw-loader": "^3.1.0",
-    "style-loader": "^1.0.0",
-    "stylelint": "^11.0.0",
-    "stylelint-config-prettier": "^5.2.0",
-    "stylelint-config-standard": "^19.0.0",
-    "terser-webpack-plugin": "^2.1.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
+    "prettier": "^1.19.1",
+    "raw-loader": "^4.0.0",
+    "style-loader": "^1.1.3",
+    "stylelint": "^13.2.1",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-standard": "^20.0.0",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2",
     "webpackbar": "^4.0.0"
   },
