--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,3 +1,9 @@
+[development]
+last 1 chrome version
+last 1 firefox version
+last 1 safari version
+
+[production]
 >0.25%
 not ie 11
 not op_mini all
