--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ Thumbs.db
 *.sublime-project
 *.sublime-workspace
 
+# Env
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Vendors
 node_modules/
 
