--- a/package.json
+++ b/package.json
@@ -15,58 +15,62 @@
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/base.js --open",
+    "start": "webpack-dev-server --config webpack/dev.js",
     "build": "webpack --config webpack/prod.js",
+    "build:analyze": "npm run build -- --env.analyze",
     "lint": "run-s -c lint:js lint:styles",
-    "lint:js": "eslint src/**/*.js",
-    "lint:styles": "stylelint src/**/*.css",
-    "lint:staged": "lint-staged"
+    "lint:js": "eslint 'src/**/*.js'",
+    "lint:styles": "stylelint 'src/**/*.css'",
+    "lint:staged": "lint-staged --relative"
   },
   "dependencies": {
-    "phaser": "^3.22.0"
+    "phaser": "^3.24.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "autoprefixer": "^9.7.4",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "favicons-webpack-plugin": "^3.0.1",
-    "file-loader": "^5.1.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.0.0",
+    "dotenv-webpack": "^2.0.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "favicons-webpack-plugin": "^4.2.0",
+    "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "ignore": "^5.1.8",
+    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "offline-plugin": "^5.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0",
-    "style-loader": "^1.1.3",
-    "stylelint": "^13.2.1",
-    "stylelint-config-prettier": "^8.0.1",
+    "prettier": "^2.0.5",
+    "raw-loader": "^4.0.1",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2",
+    "terser-webpack-plugin": "^3.0.8",
+    "webpack": "^4.44.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.9",
     "webpackbar": "^4.0.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged --relative"
+      "pre-commit": "npm run lint:staged"
     }
   }
 }
