--- a/package.json
+++ b/package.json
@@ -15,61 +15,76 @@
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/dev.js",
+    "start": "webpack serve --config webpack/dev.js",
     "build": "webpack --config webpack/prod.js",
-    "build:analyze": "npm run build -- --env.analyze",
     "lint": "run-s -c lint:js lint:styles",
-    "lint:js": "eslint 'src/**/*.js'",
-    "lint:styles": "stylelint 'src/**/*.css'",
-    "lint:staged": "lint-staged --relative"
+    "lint:js": "eslint src/**/*.js",
+    "lint:styles": "stylelint src/**/*.css",
+    "lint:staged": "lint-staged --relative",
+    "cm": "cz"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "phaser": "^3.50.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "autoprefixer": "^10.1.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.0",
-    "dotenv-webpack": "^2.0.0",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv-webpack": "^6.0.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
     "favicons-webpack-plugin": "^4.2.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.6",
     "ignore": "^5.1.8",
-    "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
+    "lint-staged": "^10.5.3",
+    "mini-css-extract-plugin": "^1.3.3",
     "npm-run-all": "^4.1.5",
     "offline-plugin": "^5.0.7",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.0.5",
-    "raw-loader": "^4.0.1",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.6.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
+    "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^4.0.0",
     "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.1",
+    "webpack-merge": "^5.7.2",
     "webpackbar": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "npm run lint:staged"
     }
   }
