--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "license": "MIT",
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-  "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --config webpack/dev.js",
     "build": "webpack --config webpack/prod.js",
@@ -28,16 +27,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "autoprefixer": "^10.1.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-webpack": "^6.0.0",
     "eslint": "^7.15.0",
@@ -45,17 +45,16 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
-    "favicons-webpack-plugin": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
+    "favicons-webpack-plugin": "^5.0.0-alpha.3",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-beta.1",
     "husky": "^4.3.6",
     "ignore": "^5.1.8",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^1.3.3",
     "npm-run-all": "^4.1.5",
-    "offline-plugin": "^5.0.7",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
@@ -64,13 +63,13 @@
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^4.0.0",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^4.3.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
     "webpack-merge": "^5.7.2",
-    "webpackbar": "^4.0.0"
+    "webpackbar": "^5.0.0-3",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "config": {
     "commitizen": {
