--- a/package.json
+++ b/package.json
@@ -23,53 +23,52 @@
     "cm": "cz"
   },
   "dependencies": {
-    "phaser": "^3.50.0"
+    "phaser": "^3.52.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "autoprefixer": "^10.1.0",
+    "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@commitlint/cli": "^12.0.0",
+    "@commitlint/config-conventional": "^12.0.0",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "favicons-webpack-plugin": "^5.0.0-alpha.3",
-    "file-loader": "^6.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-webpack-plugin": "^2.4.3",
+    "favicons": "^6.2.0",
+    "favicons-webpack-plugin": "^5.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^5.0.0-beta.1",
-    "husky": "^4.3.6",
+    "html-webpack-plugin": "^5.0.0",
+    "husky": "^4.3.8",
     "ignore": "^5.1.8",
     "lint-staged": "^10.5.3",
-    "mini-css-extract-plugin": "^1.3.3",
+    "mini-css-extract-plugin": "^1.3.5",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.1",
-    "postcss-loader": "^4.1.0",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
-    "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.0.0-beta.0",
-    "webpack-merge": "^5.7.2",
+    "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3",
-    "workbox-webpack-plugin": "^6.0.2"
+    "workbox-webpack-plugin": "^6.1.0"
   },
   "config": {
     "commitizen": {
