--- a/package.json
+++ b/package.json
@@ -20,55 +20,58 @@
     "lint:js": "eslint src/**/*.js",
     "lint:styles": "stylelint src/**/*.css",
     "lint:staged": "lint-staged --relative",
-    "cm": "cz"
+    "cm": "cz",
+    "prepare": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks"
   },
   "dependencies": {
-    "phaser": "^3.52.0"
+    "phaser": "^3.53.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/eslint-parser": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@commitlint/cli": "^12.0.0",
-    "@commitlint/config-conventional": "^12.0.0",
-    "autoprefixer": "^10.2.4",
+    "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^8.0.0",
+    "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.2",
+    "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.19.0",
+    "dotenv-webpack": "^7.0.1",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-webpack-plugin": "^2.5.0",
-    "favicons": "^6.2.0",
-    "favicons-webpack-plugin": "^5.0.1",
+    "eslint-webpack-plugin": "^2.5.2",
+    "favicons": "^6.2.1",
+    "favicons-webpack-plugin": "^5.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^5.0.0",
-    "husky": "^4.3.8",
+    "html-webpack-plugin": "^5.3.0",
+    "husky": "^5.1.3",
     "ignore": "^5.1.8",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^1.3.6",
+    "mini-css-extract-plugin": "^1.3.9",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.5",
-    "postcss-loader": "^5.0.0",
+    "postcss": "^8.2.7",
+    "postcss-loader": "^5.1.0",
     "prettier": "^2.2.1",
+    "shx": "^0.3.3",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
+    "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.21.2",
+    "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.0.0-beta.0",
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3",
-    "workbox-webpack-plugin": "^6.1.0"
+    "workbox-webpack-plugin": "^6.1.1"
   },
   "config": {
     "commitizen": {
@@ -79,11 +82,5 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run lint:staged"
-    }
   }
 }
